# level42

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FRONTEND_README.md  GIT_HISTORY_README.md  LAUNCH_CHECKLIST.md  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  generate_detailed_history.sh  generate_git_history.sh  level42_analytics.db  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tools.db  x402_payments.db
.github/workflows/: ci.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: AnimatedCounter.tsx  ElectricBorder.tsx  GlowText.tsx  LaserFlow.tsx  MatrixRain.tsx  PerformanceMonitor.tsx  PerformanceWrapper.tsx  ScrollTypewriter.tsx  TypewriterText.tsx  XPText.tsx
docs/: index.md
docs/api/: agent.md  monitoring.md  payments.md  swarm.md  tools.md  wallet.md
docs/examples/: basic-usage.md
docs/guides/: getting-started.md  multi-agent-swarms.md  production-deployment.md  troubleshooting.md
examples/: README.md  research_swarm.py  simple_agent.py  trading_bot.py
level42/: __init__.py  agent.py  exceptions.py  monitoring.py  payments.py  solana_provider.py  swarm.py  tools.py  utils.py  wallet.py
tests/: __init__.py  run_integration_tests.py  test_agent.py  test_error_handling.py  test_monitoring.py  test_payments.py  test_swarm.py  test_tools.py  test_wallet.py
tests/integration/: __init__.py  conftest.py  test_e2e.py  test_networks.py
x402_agent/: __init__.py  agent.py  exceptions.py  monitoring.py  payments.py  solana_provider.py  swarm.py  utils.py  wallet.py
x402_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
